[package]
name = "events-api-websocket-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.37.0", features = [ "sync", "time", "macros", "rt-multi-thread" ] }
dotenvy = "0.15.7"
simple_logger = "5.0.0"
log = "0.4.21"
serde = { version = "1.0.200", features = [ "derive" ] }
serde_json = "1.0.116"
actix-web = { version = "4.5.1", features = ["rustls-0_22"] }
actix-cors = "0.7.0"
actix-web-actors = "4.3.0"
actix = "0.13.3"
redis = { version = "0.25.3", features = [ "tokio-rustls-comp", "streams", "connection-manager" ] }
async-trait = "0.1.80"
itertools = "0.12.1"
anyhow = "1.0.83"
dashmap = "5.5.3"
rustls = "0.22"
rustls-pemfile = "2"
